--- a/ExampleObjectiveC/Podfile
+++ b/ExampleObjectiveC/Podfile
@@ -1,5 +1,5 @@
 platform :ios, '8.0'
 
 target 'ExampleObjectiveC' do
-  pod 'PerformanteSDK', :path => '../.'
+  pod 'PerformanteSDK', '~> 1.0'
 end
