--- a/ExampleSwift/Podfile
+++ b/ExampleSwift/Podfile
@@ -2,5 +2,5 @@ platform :ios, '8.0'
 use_frameworks!
 
 target 'ExampleSwift' do
-  pod 'PerformanteSDK', :path => '../.'
+  pod 'PerformanteSDK', '~> 1.0'
 end
